# fontatlas

./: CMakeLists.txt  Readme.md  fabfile.py
app/: main.cpp
apps/: font_data.cpp  font_meta_data.cpp
cmake_modules/: FindFontAtlas.cmake  FindFreeType.cmake  FindMath.cmake
include/api/: FontAtlas
include/core/: Atlas.hpp  Distmap.hpp  Font.hpp  MetaData.hpp
include/ft/: Error.hpp  Face.hpp  Library.hpp  ft.hpp
include/math/: Vector2.hpp
include/utils/: Path.hpp  convert.hpp
src/: main.cpp
src/api/: FontAtlas  FontAtlas.cpp
src/app/: Application.cpp  Application.hpp
src/core/: Atlas.cpp  Atlas.hpp  Distmap.cpp  Font.cpp  Font.hpp  Generator.cpp  Generator.hpp  MetaData.cpp  MetaData.hpp  Texture.cpp  Texture.hpp
src/ft/: Error.hpp  Face.cpp  Face.hpp  Glyph.cpp  Glyph.hpp  Kerning.hpp  Library.cpp  Library.hpp  ft.hpp
src/math/: Vector3.hpp  Vector4.hpp  func.hpp
src/utils/: Command.cpp  Command.hpp  Path.cpp  Path.hpp  convert.hpp
src/vendors/: edtaa3func.cpp
